# boss-ecommerce

./: .gitignore
backend/: README.md  constants.py  db.sqlite3  manage.py  pyproject.toml
backend/accounts/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_cuser_username.py  0003_delete_confirmemail.py
backend/boss_ecommerce/: asgi.py  settings.py  urls.py  wsgi.py
backend/core/: custom_exceptions.py  error_codes.py  logging_utils.py  success_codes.py  throttles.py  views.py
backend/middleware/: jwt_cookie_auth.py  log_request.py
backend/notifications/: services.py  tasks.py
backend/orders/: admin.py  models.py  serializers.py  urls.py  views.py
backend/orders/migrations/: 0001_initial.py  0002_order_payment_id_order_products_and_more.py  0003_order_razorpay_order_id.py
backend/products/: admin.py  models.py  serializers.py  urls.py  views.py
backend/products/migrations/: 0001_initial.py  0002_category_thumbnail.py  0003_alter_category_thumbnail.py  0004_product_tag.py  0005_dealoftheday.py
backend/templates/emails/auth/: confirm_email.html  email_verified.html  reset_password.html
backend/utils/: calculate_jwt_age.py  generate_uid.py  response.py
frontend/: bun.lockb  index.html  package-lock.json  package.json  vite.config.js
frontend/lib/: auth.ts  client-axios.js
frontend/src/: main.jsx
frontend/src/Components/: AddToCartButton.jsx  LAYOUT.jsx  LAYOUT2.jsx  Navbar.jsx  about.jsx  admin.jsx  banner.jsx  (+28 more)
frontend/store/: README.md  cart.js  user-profile.ts
(+30 files in other folders)
